# GFM_coastlines

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
data/aois/: aois.geojson
notebooks/: 01_setup_and_framing.ipynb  02_data_acquisition.ipynb  04_gfm_embeddings.ipynb  _build_nb04.py
src/: aois.py
